# OpenWorldLib

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
data/benchmarks/: README.md  tasks_map.py
data/benchmarks/generation/: __init__.py
docs/: awesome_world_model.md  awesome_world_represents_model.md  installation.md  planning.md  requirement_audio_gen.txt  requirement_audio_generation.txt  requirement_av_api.md  requirement_cosmos.txt  requirement_cut3r.txt  requirement_flash_world.txt  requirement_infinite_vggt.txt  requirement_infinite_world.txt  requirement_wonderworld.txt  requirement_wow_world_model.txt  requirement_yume.md  wonderworld_todo.txt
examples/: pipeline_infer_mapping.py  pipeline_load_mapping.py  pipeline_mapping.py  run_benchmark.py
examples/evaluation_tasks/: navigation_video_generation.py  text2video_generation.py
scripts/setup/: ai2thor_install.sh  cambrian_s_install.sh  default_audio_generation_install.sh  libero_install.sh  lingbot_va.sh  loger_install.sh  matrix_game_3_install.sh  omnivinci_install.sh  sana_wm_install.sh
scripts/test_benchmark/: navigation_video_eval.sh
scripts/test_inference/: test_mm_reasoning.sh  test_nav_video_gen.sh  test_vla.sh
scripts/test_stream/: test_nav_video_gen.sh
src/openworldlib/operators/: cambrian_s_operator.py  flash_world_operator.py  giga_brain_0_operator.py  hunyuan_world_voager_operator.py  hunyuan_worldplay_operator.py  (+14 more)
submodules/depth-diff-gaussian-rasterization-wonderworld/: setup.py
test/: test_ai2thor.py  test_astra.py  test_cambrian_s.py  test_cosmos_predict2p5.py  test_cut3r.py  test_depth_anything.py  test_depth_anything_v1.py  test_emu3p5.py  test_giga_brain_0.py  test_hunyuan_game_craft.py  test_hunyuan_gamecraft.py  test_hunyuan_mirror.py  test_hunyuan_world_voyager.py  test_hunyuan_worldplay.py  test_infinite_world.py  test_lingbot_va.py  test_lingbot_world.py  test_loger.py  test_matrix_game_2.py  test_matrix_game_3.py  test_mmaudio.py  test_omnivinci.py  test_pi0.py  test_pi05.py  test_pi3.py  test_qwen2p5_omni.py  test_recammaster.py  test_sana_wm.py  test_sora2.py  test_spatial_ladder.py  test_spatial_reasoner.py  test_spatial_reasoning.py  test_spirit_v1p5.py  test_spirit_v1p5_libero.py  test_thinksound.py  test_veo3.py  test_vggt.py  test_wan25.py  test_wan_2p2.py  test_wan_2p5.py  (+4 more)
test_stream/: test_cosmos_predict2p5_stream.py  test_hunyuan_game_craft_stream.py  test_infinite_world_stream.py  test_lingbot_world_stream.py  test_loger_stream.py  test_matrix_game_2_stream.py  test_pi3_stream.py  test_qwen2p5_omni_stream.py  test_vggt_stream.py  test_wan2p2_stream.py  test_yume_1p5_stream.py  test_yume_stream.py
(+208 files in other folders)
